@@ -1,5 +1,7 @@
 Release 1.11 - 10/18/2015
 
+  * Fix regression with spacing in PPT via Andreas Beeker (TIKA-1777).
+
   * Java7 API support for allowing java.nio.file.Path as method arguments
     was added to Tika and to ParsingReader, TikaFileTypeDetector, and to
     Tika Config (TIKA-1745, TIKA-1746, TIKA-1751).
